# HypeMachine

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  PLANNING.md  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  tsconfig.base.json
apps/api/: package.json
apps/api/src/: context.ts  env.ts  main.ts  seed.ts  server.ts
apps/api/src/dev/: smoke.ts
apps/api/src/jobs/: queue.ts
apps/api/src/lib/: crypto.ts  env.ts  errors.ts  pipeline-client.ts  slug.ts
apps/api/src/routes/: approvals.ts  campaigns.ts  content.ts  dashboard.ts  personas.ts  publishing.ts  settings.ts
apps/api/src/services/: analytics-service.ts  approval-service.ts  approvals.ts  generation-service.ts  generation.ts  guardrail-policy.ts  job-log.ts  memory-service.ts  notify.ts  publishing-service.ts
apps/api/test/: crypto.test.ts  e2e.test.ts
apps/pipeline/: pyproject.toml
apps/pipeline/hype_pipeline/: guardrails.py  main.py  prompts.py  providers.py  schemas.py
apps/pipeline/tests/: test_pipeline.py
apps/web/: index.html  next.config.mjs  package.json  tsconfig.json  vite.config.ts
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/app/approvals/: page.tsx
apps/web/app/campaigns/: generate-form.tsx  page.tsx
apps/web/app/personas/: page.tsx
apps/web/lib/: api.ts
apps/web/src/: api.ts  main.tsx  styles.css
campaign-template/: ethics.yml  persona.yml
campaign-template/campaigns/: guidedgenius.yml
docs/: architecture.md  build-spec.md  documentation.md  product-plan.md  prompts.md  setup.md  tech_guidelines.md
scripts/: dev-infra.sh
(+11 files in other folders)
